# ot-python

./: pyproject.toml  run.job
Group-A/: config.yaml  main.py
Group-A/src/: ae.py  cnf.py  ddpm.py  fm.py  nf.py  otemd.py  otswd.py  sdot.py  umap.py  vae.py  visualization.py
Group-B/: config.yaml  main.py
Group-B/src/core/: __init__.py  ae_architecture.py  fid_computation.py  ot_generator.py  ot_solver.py  training.py
Group-B/src/datasets/: __init__.py  celeba.py  cifar10.py  fashion_mnist.py  mnist.py
Group-B/src/methods/: __init__.py  ae.py  aeot.py  cnf.py  ddpm.py  fm.py  nf.py  otswd.py  vae.py
